fix layout's collapse, already read and register information

--- a/app/assets/stylesheets/mypage.css.scss
+++ b/app/assets/stylesheets/mypage.css.scss
@@ -436,8 +436,8 @@ ul.tab {
     p {
       float: right;
       font-size: 11px;
-      font-weight: normal;
-      margin: 2px 0 0 5px;
+      color: gray;
+      margin: 2px 0 0 3px;
     }
     span {
       float: right;
